# evident

./: .gitignore  .mcp.json  .semforaignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SESSION.md  STATE.md  TASKS.md  a  a.ev  a.smt  b  compiler.smt2  evident.py  grammar-rules.md  models-not-programs.md  prior-art.md  requirements.txt  sample.smt2  setup.sh  smt-languages-research.md  start  syntax-design-principles.md  syntax-research.md  test.sh  unicode-and-set-theory.md  what-we-learned.md
kernel/: Cargo.toml  target
kernel/src/: evidentc.rs  libcall.rs  main.rs  manifest.rs  tick.rs
kernel/src/functionize/: eval.rs  jit.rs  low.rs  mod.rs
runtime/: Cargo.toml  PLAN.md  README.md  build.rs  requirements.txt
runtime-c/: .gitignore  CMakeLists.txt  README.md
runtime-c/src/: ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  smtlib.cpp  smtlib.h  solve.cpp  solve.h  value.h  z3_link_proof.cpp
runtime-c/tests/: crosscheck.sh  seed_tests.cpp
runtime-c/tests/fixtures/: enums.ev  forced.ev  passes.ev  quantifiers.ev  records.ev  scalars.ev  seqs.ev
runtime-contract/: Cargo.toml  FORMAT.md  MATRIX.md  README.md  run-matrix.sh
runtime-contract/fixtures/async_signal_exit/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/async_stdin_line_read/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/async_tick_count_read/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/effects_chain_four/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/effects_empty_absorbing/: expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/effects_int_to_str/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/feedback_format_tick/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/feedback_int_payload/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/feedback_parse_read/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/ffi_libcall_emit/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/fixtures/ffi_shellrun_exit/: expected_effects.txt  expected_model.smt2  inputs.smt2  meta.json  prev.smt2  problem.smt2  source.ev
runtime-contract/src/: engine.rs  fixture.rs  lib.rs  value.rs
runtime-contract/survey/: 01-tick.md  02-state-threading.md  03-effects.md  04-halt.md  05-multi-fsm.md  06-given.md  07-last-results.md  INDEX.md
runtime-rust/: Cargo.toml  PROGRESS.md  README.md  build.rs
runtime-rust/.cargo/: config.toml
runtime-rust/examples/: scheduling.ev  sdl_bg_only.ev  sdl_mouse_rect.ev  sdl_render_bench.rs
runtime-rust/scripts/: install-bin.sh
runtime-rust/src/: ast.rs  commands.rs  effect_dispatch.rs  effect_loop.rs  event_sources.rs  executor.rs  ffi.rs  fti.rs  glsl.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty.rs  runtime.rs  smtlib.rs  subscriptions.rs  trace_runner.rs  translate.rs
runtime-rust/src/commands/: check.rs  lint.rs  (+14 more)
runtime-rust/tests/: basic.rs  cli.rs  demos.rs  effect_loop.rs  encode_ast.rs  enum_load_errors.rs  glsl_transpile.rs  guarded_claim.rs  iter_pass.rs  match_expr.rs  multi_fsm.rs  perf.rs  real.rs  roundtrip_ast.rs  sample.rs  scheduler_delta.rs  sdl.rs  self_hosted_pass.rs  smtlib.rs  subscriptions_demo.rs  vector_arith.rs
runtime-smt/: COVERAGE.md  Cargo.toml  FORMAT.md  README.md  baseline.sh  crosscheck.sh
runtime-smt/crosscheck/: countdown.ev  decrement_tick.ev  scalar.ev  two_fsms.ev
runtime-smt/fixtures/: countdown.smt2  feedback_loop.smt2  n0_floor.smt2  pingpong.smt2  two_fsms.smt2
runtime-smt/src/: assertion.rs  cache.rs  driver.rs  effect.rs  frontend.rs  fsm_frontend.rs  halt.rs  lib.rs  main.rs  meta.rs  model.rs  schedule.rs  scheduler.rs  spec.rs  tick.rs  world.rs  z3c.rs
runtime-smt/tests/: contract.rs  convergence.rs
runtime/examples/: bench_functionize.rs  bench_symmetric.rs  bench_toposort.rs  explore_classification.rs  explore_decomposition.rs  probe_gate.rs  probe_mario.rs  size_check.rs
runtime/scripts/: install-bin.sh
runtime/src/: __init__.py  algebraic.py  ast.rs  ast_types.py  chc.rs  commands.rs  compose.py  comprehension.py  cranelift_jit.rs  decompose.rs  dispatch.rs  effect_dispatch.rs  effect_loop.rs  emit.rs  encode.rs  env.py  evaluate.py  event_sources.rs  evidence.py  executor.py  ffi.rs  fixedpoint.py  fmt.rs  fti.rs  functionize.rs  instantiate.py  lexer.rs  lib.rs  main.rs  optimize.py  parser.rs  plugin.py  pretty.rs  prettyprint.py  quantifiers.py  runtime.py  runtime.rs  rust_vm.rs  sdl_plugin.py  session.py  (+12 more)
runtime/tests/: basic.rs  behavior_contract.rs  chc_countdown.rs  classify.rs  cli.rs  coindexed_edges.rs  composite_tree_walk.rs  concurrency_stress.rs  contract_evolve.rs  cranelift_jit_bench.rs  cranelift_jit_hello.rs  demos.rs  desugar_correctness.rs  desugar_equivalence.rs  desugar_passthrough.rs  differential.rs  effect_loop.rs  effects_producer_pipeline.rs  encode_ast.rs  enum_load_errors.rs  enum_payload_computed_on.rs  export.rs  fmt_corpus.rs  fsm_unroll.rs  functionize.rs  functionize_forall.rs  functionize_match.rs  functionize_records.rs  generics_correctness.rs  generics_equivalence.rs  glsl_functionizer.rs  guarded_claim.rs  indexed_given.rs  initial_value_equiv.sh  inject_correctness.rs  introspect_correctness.rs  jit_gap_div_mod.rs  jit_gap_guarded_seq.rs  jit_gap_str_concat.rs  jit_minimal.rs  (+73 more)
tools/evident-lsp/: Cargo.toml  README.md
tools/evident-tools/: Cargo.toml
(+2806 files in other folders)
