[package]
name = "evident-kernel"
version = "0.1.0"
edition = "2021"
description = "Tiny trampoline + libffi kernel that runs Evident programs from SMT-LIB."

[dependencies]
z3-sys = "0.8"
libffi = { version = "3", features = ["system"] }
libloading = "0.8"
sha2 = "0.10"

# Functionizer Cranelift JIT backend (task #18). Pinned to 0.103.0 to match
# the legacy reference port's API (legacy-rust/functionizer/src/cranelift.rs);
# 0.110+ changed StackSlotData::new's arity and other surfaces.
cranelift = "=0.103.0"
cranelift-jit = "=0.103.0"
cranelift-module = "=0.103.0"
cranelift-native = "=0.103.0"

[[bin]]
name = "kernel"
path = "src/main.rs"
