[package]
name = "evident-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Evident constraint runtime (experimental)"

[dependencies]
z3 = "0.12"
# SDL2 plugin: graphical I/O. Requires SDL2 system library
# (`brew install sdl2` on macOS). pkg-config locates it at build time.
sdl2 = "0.36"
# OpenGL bindings for SDLShaderOutput. The plugin creates an SDL
# window with a GL 3.3 core profile context, compiles the Evident-
# transpiled fragment shader, and renders a fullscreen triangle.
gl = "0.14"
# FFI primitive (docs/design/ffi-design.md): dynamic library loading
# + libffi for variadic C ABI calls. libloading wraps dlopen/dlsym
# (and LoadLibrary on Windows, when we add it). The libffi crate
# wraps libffi for argument marshalling at call time.
libloading = "0.8"
# libffi: enable the `system` feature so we link against the
# OS-installed libffi (Homebrew on macOS, system pkg on Linux)
# rather than building from source. The bundled build path was
# failing on macOS aarch64 with CFI assembler errors.
libffi = { version = "3", features = ["system"] }

[lib]
name = "evident_runtime"
path = "src/lib.rs"

[[bin]]
name = "evident"
path = "src/main.rs"
