[package]
name = "evident-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Evident constraint runtime (experimental)"

[dependencies]
z3 = "0.12"
# FFI primitive: dynamic library loading + libffi for C ABI calls.
# Enables Evident programs to call any C function (POSIX syscalls,
# user libraries, etc.) without per-feature plugin code in Rust.
libloading = "0.8"
libffi     = { version = "3", features = ["system"] }

[lib]
name = "evident_runtime"
path = "src/lib.rs"

[[bin]]
name = "evident"
path = "src/main.rs"
