[package]
name = "evident-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Evident constraint runtime (experimental)"

[dependencies]
z3 = "0.12"
z3-sys = "0.8"
# FFI primitive: dynamic library loading + libffi for C ABI calls.
# Enables Evident programs to call any C function (POSIX syscalls,
# user libraries, etc.) without per-feature plugin code in Rust.
libloading = "0.8"
libffi     = { version = "3", features = ["system"] }
# Signal handling: SIGINT (Ctrl-C) pushes a Signal event to the
# scheduler so user FSMs can run cleanup before exiting.
signal-hook = "0.3"
# Seedable RNG for effect-dispatch tie-breaking — unconstrained
# orderings are randomized so accidental-ordering bugs surface;
# EVIDENT_DISPATCH_SEED reproduces a specific run.
rand = "0.8"
# Cranelift JIT: compile Z3-AST function-shaped components into
# native code. See `runtime/src/functionize/cranelift.rs` and
# `docs/plans/compile-constraints-to-programs/round-24-*.md`.
cranelift          = "0.103"
cranelift-jit      = "0.103"
cranelift-module   = "0.103"
cranelift-native   = "0.103"
# LLM functionizer (opt-in, `functionize/llm.rs`): sync HTTP client +
# JSON for the Anthropic Messages API. Only the AnthropicGenerator
# code path touches the network, and only when ANTHROPIC_API_KEY is
# set; the default Cranelift functionizer never reaches these.
ureq       = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
# Integration tests for the LLM functionizer hand-build a Z3Program
# to exercise `Functionizer::compile` directly. Same z3 version as
# the lib so the `Dynamic`/`Context` types unify.
z3 = "0.12"

[lib]
name = "evident_runtime"
path = "src/lib.rs"

[[bin]]
name = "evident"
path = "src/main.rs"
