[package]
name = "evident-lsp"
version = "0.2.0"
edition = "2021"
description = "Language Server (LSP) for the Evident constraint language, built on tower-lsp."

[[bin]]
name = "evident-lsp"
path = "src/main.rs"

[dependencies]
# The shared refactoring engine (lexer + index + rename + resolve + positions).
# Path dependency — the LSP links it as a library, never duplicates it.
evident-tools = { path = "../evident-tools" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

# Standalone workspace so this never participates in the kernel's cargo build
# graph (mirrors evident-tools/Cargo.toml). It pulls tower-lsp + tokio from
# crates.io; the engine is a sibling path dep.
[workspace]

[profile.release]
opt-level = 2
