[package]
name = "evident-tools"
version = "0.1.0"
edition = "2021"
description = "Refactoring tooling for the Evident language (index, defs, refs, rename, symbols, families, collisions)"

[lib]
name = "evident_tools"
path = "src/lib.rs"

[[bin]]
name = "evt"
path = "src/main.rs"

[[bin]]
name = "evident-lsp"
path = "src/lsp.rs"

# Standalone workspace so this never participates in the kernel's cargo
# build graph. No dependencies — pure std, single static binary.
[workspace]

[profile.release]
opt-level = 2
